fixes collapsing ATT_ID column in WP list table [touch:1352]

--- a/includes/core/admin/attendees/assets/espresso_attendees_admin.css
+++ b/includes/core/admin/attendees/assets/espresso_attendees_admin.css
@@ -14,16 +14,16 @@ textarea { width:25em; }
 
 /* TABLE COLUMNS */
 
-.column-ATT_ID { width:2%; }
-.column-ATT_fname { width:10%; }
-.column-ATT_lname { width:12.5%; }
-.column-ATT_email { }
-.column-ATT_address { width:15%; }
-.column-ATT_city { width:10%; }
-.column-STA_ID { width:5.5%; }
-.column-CNT_ISO { width:7%; }
-.column-ATT_phone { width:10%; }
-.column-actions { width:5%;  }
+.wp-list-table #ATT_ID { width:18px; }
+.wp-list-table #ATT_fname { width:10%; }
+.wp-list-table #ATT_lname { width:12.5%; }
+.wp-list-table #ATT_email { }
+.wp-list-table #ATT_address { width:15%; }
+.wp-list-table #ATT_city { width:10%; }
+.wp-list-table #STA_ID { width:5.5%; }
+.wp-list-table #CNT_ISO { width:7%; }
+.wp-list-table #ATT_phone { width:10%; }
+.wp-list-table #actions { width:5%;  }
 
 .jst-left { text-align:left; }
 .jst-cntr { text-align:center; }
